compiler/testData/diagnostics/tests/regressions/TypeParameterAsASupertype.fir.kt
class A<T> : <!OTHER_ERROR!>T<!> {}